--- a/album.html
+++ b/album.html
@@ -60,7 +60,7 @@
 </button>
 	      <button id="btnMio" 
         style="color:#00ffff; background:linear-gradient(45deg, #ff0, #f0f); border:none; border-radius:10px; padding:5px 10px; cursor:pointer; font-weight:bold;"
-        onclick="location.href='muro.html'">
+        onclick="location.href='juego/game.html'">
   juego
 </button>
 <!-- Botón Ayuda actualizado -->
