--- a/muro.html
+++ b/muro.html
@@ -167,7 +167,7 @@ body { font-family:'Segoe UI', sans-serif; background:#0d0d0d; color:#fff; }
 */
 
 // URL del script PHP (mismo directorio)
-const API = 'guardar.php';
+const API = 'https://briancristaldo2021-creator.github.io/pagina/guardar.html';
 
 // ---------------- USUARIO ----------------
 let usuario = JSON.parse(localStorage.getItem('usuario')) || {nombre:'Cofundador', avatar:'img/logo.png', figuritas:['A','B','C']};
